src/test/deca/syntax/invalid/32_test_bad_instance_of.deca
// Description:
//    Test d'un mauvais instanceof
//
// Resultats:
//    Ligne 11
//
// Historique:
//    cree le 01/01/2023

{
    boolean a = A instanceof println();
}